--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.7",
     "axios": "^0.27.2",
+    "dayjs": "^1.11.3",
     "mui-datatables": "^4.2.2",
     "next": "12.2.2",
     "react": "18.2.0",
