--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-inspector": "^6.0.1"
+    "react-inspector": "^6.0.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "8.19.0",
