--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@mui/material": "^5.8.7",
     "axios": "^0.27.2",
     "dayjs": "^1.11.3",
+    "mongodb": "^4.10.0",
+    "mongoose": "^6.6.1",
     "mui-datatables": "^4.2.2",
     "next": "12.2.2",
     "react": "18.2.0",
