--- a/package.json
+++ b/package.json
@@ -1,33 +1,40 @@
 {
-  "name": "ifpbbot-logger",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix",
-    "export": "next build && next export"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
-    "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.8.7",
-    "axios": "^0.27.2",
-    "dayjs": "^1.11.3",
-    "mongodb": "^4.10.0",
-    "mui-datatables": "^4.2.2",
-    "next": "12.2.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-inspector": "^6.0.1",
-    "uuid": "^8.3.2"
-  },
-  "devDependencies": {
-    "eslint": "8.19.0",
-    "eslint-config-next": "12.2.2",
-    "eslint-plugin-only-warn": "^1.0.3"
-  }
+	"name": "ifpbbot-logger",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"lint:fix": "next lint --fix",
+		"export": "next build && next export",
+		"format": "prettier -w ."
+	},
+	"dependencies": {
+		"@emotion/react": "^11.9.3",
+		"@emotion/styled": "^11.9.3",
+		"@mui/icons-material": "^5.8.4",
+		"@mui/material": "^5.8.7",
+		"axios": "^0.27.2",
+		"dayjs": "^1.11.3",
+		"mongodb": "^4.10.0",
+		"mui-datatables": "^4.2.2",
+		"next": "12.2.2",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-inspector": "^6.0.1",
+		"uuid": "^8.3.2"
+	},
+	"devDependencies": {
+		"@types/mui-datatables": "^3.7.9",
+		"@types/node": "^18.7.18",
+		"@types/react": "^18.0.20",
+		"@types/uuid": "^8.3.4",
+		"eslint": "8.19.0",
+		"eslint-config-next": "12.2.2",
+		"eslint-plugin-only-warn": "^1.0.3",
+		"prettier": "^2.7.1",
+		"typescript": "^4.8.3"
+	}
 }
